added article with latin text

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,7 @@
   <li class="test">Ever!</li>
 </ul>
 
+<article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae facilis iure nihil quisquam unde. A accusamus architecto cumque dolorem eos eveniet iste labore laboriosam maxime nam, odio officia quaerat quo quod quos recusandae reiciendis rerum saepe similique sit temporibus tenetur voluptatem. A doloribus eum id laborum laudantium reiciendis saepe temporibus?</article>
+
 </body>
 </html>
